--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ interface Props {
 const { title } = Astro.props;
 ---
 
-<!-- TODO: - [] update read me--><!doctype html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta name="view-transition" content="same-origin" />
@@ -21,7 +21,7 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="">
+  <body>
     <div class="relative grid min-h-dvh grid-rows-[auto_1fr_auto]">
       <Header />
       <main class="p-4">
@@ -48,3 +48,5 @@ const { title } = Astro.props;
       monospace;
   }
 </style>
+
+<!-- TODO: - [] update read me-->
