--- a/src/pages/projects/[projectId].astro
+++ b/src/pages/projects/[projectId].astro
@@ -26,6 +26,7 @@ if (!project) {
 <Layout title="My Project">
   <section class="mx-auto max-w-3xl gap-4 shadow-elevate-light dark:shadow-elevate-dark">
     <ProjectCard
+      techstackArr={project.techStacks}
       repoUrl={project.repoUrl}
       siteUrl={project.liveUrl}
       description={project.description}
