style: main page

--- a/src/components/Layouts/Header.astro
+++ b/src/components/Layouts/Header.astro
@@ -85,6 +85,7 @@ const pageLinks = [
   applyTheme();
 </script>
 
+<!-- TODO: make the sub page show. -->
 <nav
   class:list={[
     "-transition-90-custom sticky top-0 z-10 flex w-full items-center justify-center p-2",
