--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,6 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
+<!-- TODO: create a better one  -->
 <Layout title="Page not Found">
   <main>
     <svg
