--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,7 +51,7 @@ const project = await getFeaturedProjectUseCase();
         class="sm:relative sm:z-10 sm:col-start-1 sm:row-start-1 sm:row-end-3 sm:w-11/12 sm:justify-self-end md:z-0 md:w-5/6"
       />
     </article>
-    <aside class="relative flex max-w-xl grow flex-col items-center justify-center px-4">
+    <aside class="relative flex size-fit max-w-xl grow flex-col items-center justify-center px-4">
       <div class="absolute bottom-[calc(100%-1em)] md:top-0">
         <h2
           class:list={[
