--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ const { title } = Astro.props;
   <body>
     <div class="relative grid min-h-dvh grid-rows-[auto_1fr_auto]">
       <Header />
-      <main class="p-4">
+      <main class="relative p-4">
         <slot />
       </main>
       <Footer />
